--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-		<link rel="stylesheet" href="css/style.css">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<title>Layout-1</title>
-    </head>
-    <body class="index-body">
-        <header class="index-header">
-            <div class = "logo"></div>
-            <nav class="index-nav">
-                <a href class="selected-nav" ="#">Layout 1</a>
-                <a href="layout2.html">Layout 2</a>
-                <a href="#">Layout 3</a>
-            </nav>
-        </header>
-        <main class="index-main">
-            <div class = "index-box-1"></div>
-            <div class = "index-box-2"></div>
-            <div class = "index-box-3"></div>
-        </main>
-        <footer class="index-footer">
 
-        </footer>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Layout-1</title>
+</head>
+
+<body class="index-body">
+    <header class="index-header">
+        <div class="logo"></div>
+        <nav class="index-nav">
+            <a href class="selected-nav"="#">Layout 1</a>
+            <a href="layout2.html">Layout 2</a>
+            <a href="#">Layout 3</a>
+        </nav>
+    </header>
+    <section id="index-wrapper">
+        <main class="index-main">
+            <div class="index-box-1"></div>
+            <div class="index-box-2"></div>
+            <div class="index-box-3"></div>
+        </main>
+    </section>
+    <footer class="index-footer">
+    </footer>
+
+</body>
+
 </html>
