--- a/layout2.html
+++ b/layout2.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-		<link rel="stylesheet" href="css/style.css">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<title>Layout-2</title>
-    </head>
-    <body class="layout2-body">
-        <header class="layout2-header">
-            <div class = "logo"></div>
-        </header>
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Layout-2</title>
+</head>
+
+<body class="layout2-body">
+    <header class="layout2-header">
+        <div class="logo"></div>
+    </header>
+    <section id="layout2-wrapper">
         <main class="layout2-main">
             <nav class="layout2-nav">
                 <ul>
-                    <li><div class="layout2-nav-li"><a href="index.html">Layout 1</a></div></li>
-                    <li><div class="layout2-nav-li selected-nav"><a href="#">Layout 2</a></div></li>
-                    <li><div class="layout2-nav-li"><a href="#">Layout 3</a></div></li>
+                    <li>
+                        <div class="layout2-nav-li"><a href="index.html">Layout 1</a></div>
+                    </li>
+                    <li>
+                        <div class="layout2-nav-li selected-nav"><a href="#">Layout 2</a></div>
+                    </li>
+                    <li>
+                        <div class="layout2-nav-li"><a href="#">Layout 3</a></div>
+                    </li>
                 </ul>
             </nav>
 
@@ -38,5 +47,7 @@
         <footer class="layout2-footer">
 
         </footer>
-    </body>
+    </section>
+</body>
+
 </html>
