heirarchy changes to reduce classes

--- a/index.html
+++ b/index.html
@@ -8,23 +8,21 @@
     <title>Layout-1</title>
 </head>
 
-<body class="index-body">
+<body>
     <header class="index-header">
-        <div class="logo"></div>
-        <nav class="index-nav">
+        <div></div>
+        <nav>
             <a href class="selected-nav"="#">Layout 1</a>
             <a href="layout2.html">Layout 2</a>
             <a href="#">Layout 3</a>
         </nav>
     </header>
-    <section id="index-wrapper">
-        <main class="index-main">
+        <main id="index-wrapper">
             <div class="index-box-1"></div>
             <div class="index-box-2"></div>
             <div class="index-box-3"></div>
         </main>
-    </section>
-    <footer class="index-footer">
+    <footer class="footer">
     </footer>
 
 </body>
