--- a/layout2.html
+++ b/layout2.html
@@ -8,22 +8,22 @@
     <title>Layout-2</title>
 </head>
 
-<body class="layout2-body">
+<body>
     <header class="layout2-header">
-        <div class="logo"></div>
+        <div></div>
     </header>
     <section id="layout2-wrapper">
         <main class="layout2-main">
-            <nav class="layout2-nav">
+            <nav>
                 <ul>
                     <li>
-                        <div class="layout2-nav-li"><a href="index.html">Layout 1</a></div>
+                        <a href="index.html">Layout 1</a>
+                    </li>
+                    <li class="selected-nav">
+                        <a href ="#">Layout 2</a>
                     </li>
                     <li>
-                        <div class="layout2-nav-li selected-nav"><a href="#">Layout 2</a></div>
-                    </li>
-                    <li>
-                        <div class="layout2-nav-li"><a href="#">Layout 3</a></div>
+                        <a href="#">Layout 3</a>
                     </li>
                 </ul>
             </nav>
@@ -44,7 +44,7 @@
                 <div class="layout2-aside-box-bottom"></div>
             </section>
         </main>
-        <footer class="layout2-footer">
+        <footer class="footer">
 
         </footer>
     </section>
