second changes to reduce classes

--- a/layout2.html
+++ b/layout2.html
@@ -29,19 +29,19 @@
             </nav>
 
             <section class="layout2-main-section">
-                <div class="layout2-main-left">
+                <div class="left">
                     <section class="layout2-box"></section>
                     <section class="layout2-box layout2-box-mid"></section>
                     <section class="layout2-box"></section>
                 </div>
-                <div class="layout2-main-right">
+                <div class="right">
                     <section class="layout2-box layout2-box-top"></section>
                     <section class="layout2-box"></section>
                 </div>
             </section>
             <section class="layout2-aside-section">
-                <div class="layout2-aside-box-top"></div>
-                <div class="layout2-aside-box-bottom"></div>
+                <div class="top"></div>
+                <div class="bottom"></div>
             </section>
         </main>
         <footer class="footer">
