--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </nav>
     </header>
         <main id="index-wrapper">
-            <div class="index-box-1"></div>
-            <div class="index-box-2"></div>
-            <div class="index-box-3"></div>
+            <div class="box-1"></div>
+            <div class="box-2"></div>
+            <div class="box-3"></div>
         </main>
     <footer class="footer">
     </footer>
