--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <a href class="selected-nav"="#">Layout 1</a>
             <a href="layout2.html">Layout 2</a>
-            <a href="#">Layout 3</a>
+            <a href="layout3.html">Layout 3</a>
         </nav>
     </header>
         <main id="index-wrapper">
