--- a/layout2.html
+++ b/layout2.html
@@ -23,7 +23,7 @@
                         <a href ="#">Layout 2</a>
                     </li>
                     <li>
-                        <a href="#">Layout 3</a>
+                        <a href="layout3.html">Layout 3</a>
                     </li>
                 </ul>
             </nav>
